--- a/Assignments/assignment12/AbstractionInOpenSource/readme.me
+++ b/Assignments/assignment12/AbstractionInOpenSource/readme.me
@@ -1,2 +1,39 @@
 Jeffrey Kerley 
-Abstraction Data Open Source
+Abstraction Data Open Source During Relief 
+
+Looking at the software that came out during Corona virus 19, the Japen nuclear reactor failing, and even terrorist attacks, what makes good software in times of need is hard to determine. This open source project will read in other open source software that was released in times of need, and analyze the levels of abstraction in them. The idea of reusing software is not new, but to see how this can effect the turn-around in which important software can be produced is new. 
+
+WORDWIDE DATA
+
+This projerct would pull in software from all over the world from any country, that was relased after, or during a pandemic. This actual data would be pulled from abstract words, class reuse, databases used, imports, libraries, etc. Anything that is reusing and abstracting will be counted in this open source. The idea is to inspect an open source project, and then use the important data of how the made this software.
+
+DEFINITIONS AND CREATION
+
+Any and all "data" is coming from open source software. All definitions of what constitutes abstraction or reuse will be defined by:
+  1. The coding language they are using.
+  2. Multiple class calls from previous projects.
+  3. libraires being imported. 
+  4. Specific importants
+  5. Databases or api calls
+  6. Interfaces, abstract classes, etc.
+  7. Integrating other fully released software
+  
+EXAMPLES
+
+When looking at base abstraction Java lends its own interfaces and abstract classes. Each language can implement data abstraction as well. This is not limited to keywords, but rather the entire software itself. If this open source project using an entire library from another open source that makes this new software launch in two weeks, rather than two months, this is what my project wants to find.
+
+EXAMPLE-functionality 
+  You have a project made in java. Lets call it JapanPopulation-Tracker. This app tracks where you are in relation to other people using the app to meet up for help, or company. My project would take their open source app, code and all and save their code as a csv, txt, or even .jar,.js, etc. Then, the entire code is searched for several things: Abstraction, reuse, libraries used, other contributions, and if they licensed from other companies, it would look for this as well. 
+  
+DATA ABTAINED
+
+Open source data is free to examine and if non open source projects are inspected, their will be agreements and a formal contract for an NDA.
+
+CONTACT
+
+If you want to add what we look for in abstraction contact:
+Jakcqc@mail.missouri.edu
+
+CONTRIBUTORS
+
+Jeffrey Kerley 
